  * debian/initramfs/cryptroot-{hook,script}: add support for 'keyslot' option
    to cryptroot initramfs script. (closes: #801479)
  * debian/README.initramfs, debian/initramfs/cryptroot-hook: add support for
    storing keyfiles directly in the initrd. (closes: #786578)
  * debian/initramfs/cryptroot-hook: display a warning for invalid source
    devices (closes: #720515, #781955, #784435)

 -- Jonas Meurer <mejo@debian.org>  Thu, 17 Dec 2015 19:39:10 +0100

cryptsetup (2:1.6.6-5) unstable; urgency=high

  * debian/cryptdisks.functions: fix the precheck for ubuntu+upstart
    before invoking 'status cryptdisks-udev'. (closes: #773456)
  * debian/cryptdisks.functions: fix the insufficient grep regex for
    detecting a running cryptdisks-udev (upstart) init script.

 -- Jonas Meurer <mejo@debian.org>  Thu, 22 Jan 2015 21:22:08 +0100

cryptsetup (2:1.6.6-4) unstable; urgency=medium

  [ Simon McVittie ]
  * debian/initramfs/cryptroot-script: decrypt /usr as well as / so that
    split-/usr will work with initramfs-tools (>= 0.118). (closes: #767832)

  [ Jonas Meurer ]
  * debian/cryptdisks.funcctions: check for cryptdisks-udev initscript before
    actually invoking 'status' on it. It's only useful in ubuntu+upstart
    environment anyway. (closes: #764564)
  * debian/askpas.c: fix systemd_read() to really strip trailing newline from
    input. Thanks to Quentin Lefebvre for report and patch. (closes: #768407)

 -- Jonas Meurer <mejo@debian.org>  Wed, 17 Dec 2014 14:24:41 +0100

cryptsetup (2:1.6.6-3) unstable; urgency=medium

  * debian/initramfs/cryptroot-script: fix environment variable $CRYPTTAB_TRIED
    to hold the number of actual tries instead of the number of maximum tries.
    Thanks to Luc Maisonobe for debugging and the patch. (closes: #758788)

 -- Jonas Meurer <mejo@debian.org>  Tue, 07 Oct 2014 19:51:36 +0200

cryptsetup (2:1.6.6-2) unstable; urgency=medium

  * rename 'luksheader' option in crypttab to 'header', as it may be used for